--- a/templates/mythbuster.html
+++ b/templates/mythbuster.html
@@ -4,6 +4,16 @@
 {% endblock %}
 {% block content %}
  <div class="container">
- <h1>Myth Busters!</h1>
+ <h1>Busting MythBusters</h1>
+   <p> 1. There are no drugs currently known to cure the corona virus:
+     although there are testings for posible treatment of the virus none have been confirmed. Misuses of drugs can lead to serious side effects </p>
+ <p> 2. Adding pepper to your foods will not prevent or cure the virus </p>
+ <p> 3.The corona virus is not transmitted through houseflies or bugs </p>
+ <p> 4.Introducing bleach into your body will not cure the virus and can be very harmful to your body </p>
+ <p> 5.Exposing yourself to hot temperatures will not cure the virus </p>
+ <p> 6.You CAN recover from the corona virus </p>
+ <p> 7.Drinking alcohol does not prevent you from contracting the corona virus </p>
+  <p> 8.Everyone can be susceptile to contracting the virus </p>
+  
  </div>
 {% endblock %}
