--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </style>
 
 <header style="text-align: center;">
-	<button class="main" onclick="window.location.href='../../'">COVID 19 - Everything You Need To Know</button>
+	<button class="main" onclick="window.location.href='../../'">COVID 19  <label style="font-size: 25px">Everything You Need To Know</label></button>
 
 
 </header>
